[MD extensions] command line control of error-console

This CL makes the extensions error console page disabled in channels >
the dev channel. In the dev channel it's disable by default, but may be
enabled with the --enable-error-console command line switch.

Bug: 785062
Change-Id: I4906be4effdc4b5c8a97451a1cb64688b8cbe699